# holocron

./: CLAUDE.md  README.md  example.env  pyproject.toml
.beads/: issues.jsonl
.claude/: settings.local.json
src/holocron/: __init__.py  __main__.py  cli.py  config.py
src/holocron.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/holocron/content/: __init__.py  loader.py  python_lessons.py  reading_lessons.py
src/holocron/core/: __init__.py  grader.py  mastery.py  models.py  pedagogy.py  transformer.py
src/holocron/domains/: __init__.py  base.py  registry.py  template.py
src/holocron/domains/programming/: __init__.py  adapter.py
src/holocron/domains/reading/: __init__.py  adapter.py
src/holocron/formats/: __init__.py
src/holocron/formatting/: __init__.py
src/holocron/gui/: __init__.py  app.py  native_launcher.py  pages.py
src/holocron/learner/: __init__.py  database.py
src/holocron/llm/: __init__.py  client.py
src/holocron/repl/: __init__.py  session.py
src/holocron/web/: __init__.py
tests/: __init__.py  test_core_models.py  test_database.py  test_grader.py  test_llm.py  test_pedagogy.py  test_programming_adapter.py  test_reading_adapter.py  test_repl.py
